<resources>
    <string name="app_name">Movie Night</string>
    <!--// TODO: Please Provide Your Own Movie Database API Key to use my app-->
    <string name="movies_database_api_key"></string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="movie_details_base_url">https://api.themoviedb.org/3/movie/</string>
    <string name="movie_details_api_url">"?api_key="</string>
    <string name="image_url">/images</string>
    <string name="video_url">/videos</string>
    <string name="credits_url">/credits</string>
    <string name="recomm">/recommendations</string>
    <string name="similar">/similar</string>
    <string name="reviews">/reviews</string>
    <string name="overview">Overview</string>
    <string name="this_is_the_overview">this is the overview</string>
    <string name="cast_list">Cast List</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="latest">Latest</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular_url">"https://api.themoviedb.org/3/movie/popular?api_key="</string>
    <string name="nowPlaying_url">https://api.themoviedb.org/3/movie/now_playing?api_key=</string>
    <string name="top_rated_url">https://api.themoviedb.org/3/movie/top_rated?api_key=</string>
    <string name="see_all">SEE ALL</string>
    <string name="movies">Movies</string>
    <string name="favourites">Favourites</string>
    <string name="cinemas">Cinemas</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="search_toolbar">Search Toolbar</string>
    <string name="add_more_nearby_cinemas_to_the_map">Add more nearby cinemas to the map</string>
    <string name="show_your_location">Show your location</string>
    <string name="show_near_by_cinemas">Show near by cinemas</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="expand_to_see_more">Expand to see more</string>
    <string name="see_less">See less</string>
    <string name="actor_picture">Actor Picture</string>
    <string name="back_drop_image_for_movie">back drop image for movie</string>
    <string name="movie_poster">movie poster</string>
    <string name="icon_image">icon image</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="search_url">https://api.themoviedb.org/3/search/movie?api_key=&amp;query=</string>
    <string name="url_extra">url</string>
    <string name="fav_type">fav</string>
    <string name="getMovies_action">getMovies</string>
    <string name="ids_extra">ids</string>
    <string name="extraID">extraID</string>
    <string name="images_url">https://image.tmdb.org/t/p/w500</string>
    <string name="popular_type">popular</string>
    <string name="now_type">now</string>
    <string name="top_type">top</string>
    <string name="extraTitle">extraTitle</string>
    <string name="extraPath">extraPath</string>
    <!--// TODO: Please Provide Your Own GOOGLE API Key to use my app-->
    <string name="GOOGLE_PLAY_API_KEY"></string>
    <string name="NearBySearch_first">https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=</string>
    <string name="NearBySearch_second">&amp;radius=20000&amp;type=movie_theater&amp;keyword=cinema&amp;key=</string>
    <string name="NextPageMapsUrl_first">https://maps.googleapis.com/maps/api/place/nearbysearch/json?&amp;key=</string>
    <string name="overview_detail">overview</string>
    <string name="Info_frag">Info</string>
    <string name="Images_Videos_frag">Images &amp; Videos</string>
    <string name="Reviews_frag">Reviews</string>
    <string name="Similar_Movies_frag">Similar Movies</string>
    <string name="Recommendations_frag">Recommendations</string>
    <string name="dialog_title">You are Offline</string>
    <string name="dialog_message">Oops! There is no Internet connection, Please check your connection and try again.</string>
    <string name="rate">rate</string>
    <string name="cover_photo">cover photo</string>
    <string name="previous_page">previous page</string>
    <string name="movie_profile_photo">movie profile photo</string>
    <string name="state">state</string>
    <string name="movies_key">movies</string>
    <string name="map">map</string>
    <string name="star_image">star_image</string>
    <string name="images_title">Images</string>
    <string name="videos_title">Videos</string>

</resources>
