<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MovieInfoFrag">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/overview_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/movie_info_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/secondaryTextLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_movie_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="8dp"
        tools:text="@string/this_is_the_overview"/>
   <ImageView
       android:id="@+id/movie_overview_more"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:background="@color/colorAccent"
       android:src="@drawable/ic_expand_more_black_24dp"
       android:visibility="gone"
       android:contentDescription="@string/expand_to_see_more"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_margin="8dp"
       app:layout_constraintTop_toBottomOf="@id/movie_info_overview"
       app:layout_constraintBottom_toTopOf="@id/movie_info_cast_title"/>
    <ImageView
        android:id="@+id/movie_overview_less"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_expand_less_black_24dp"
        android:visibility="gone"
        android:contentDescription="@string/see_less"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/movie_info_overview"
        app:layout_constraintBottom_toTopOf="@id/movie_info_cast_title"/>
    <TextView
        android:id="@+id/movie_info_cast_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_overview_more"
        android:text="@string/cast_list"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movie_castlist_rv"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/movie_info_cast_title"
        app:layout_constraintStart_toStartOf="parent">
    </android.support.v7.widget.RecyclerView>



</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>