<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
android:layout_width="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:map="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".MapsFragment">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name=
            "com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/autocomplete_fragment"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_gps_fixed_black_24dp"
        android:contentDescription="@string/show_your_location"
        android:id="@+id/ic_gps"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/autocomplete_fragment"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_local_movies_black_24dp"
        android:contentDescription="@string/show_near_by_cinemas"
        android:id="@+id/ic_local_movies"/>
    <ImageView
        android:id="@+id/btn_more_cinemas"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_add_location_black_24dp"
        android:layout_toEndOf="@id/ic_local_movies"
        android:layout_below="@id/autocomplete_fragment"
        android:contentDescription="@string/add_more_nearby_cinemas_to_the_map"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        />

</RelativeLayout>


