<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MoviesFragment"
    >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/movie_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:text="@string/now_playing"
                app:layout_constraintTop_toBottomOf="@id/main_action_layout"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_now_playing_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/movie_now_playing"
                app:layout_constraintStart_toStartOf="parent">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/movie_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:paddingStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/movie_now_playing_rv"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/movie_seeall_topRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/see_all"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/movie_top_rated"
                app:layout_constraintEnd_toEndOf="parent" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_top_rated_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/movie_top_rated"
                app:layout_constraintStart_toStartOf="parent">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/movie_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/popular"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/movie_seeall_popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_top_rated_rv" />

            <TextView
                android:id="@+id/movie_seeall_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/see_all"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_top_rated_rv" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_popular_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/movie_popular"
                app:layout_constraintStart_toStartOf="parent">
            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

